Evidencias de ejercicios resueltos en imagenes

--- a/Modulo-7-Ciclos/01-While.ipynb
+++ b/Modulo-7-Ciclos/01-While.ipynb
@@ -9,17 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sadas']\n",
-      "['sadas', 'dasds']\n",
-      "['sadas', 'dasds', 'asda']\n",
-      "['sadas', 'dasds', 'asda', 'asdasd']\n"
+      "['Jupiter']\n",
+      "['Jupiter', 'Saturno']\n",
+      "['Jupiter', 'Saturno', 'Tierra']\n"
      ]
     }
    ],
